--- a/packages/flow/src/css/component/FlowGate.module.scss
+++ b/packages/flow/src/css/component/FlowGate.module.scss
@@ -24,7 +24,7 @@
         border-radius: var(--radius);
     }
 
-    :is(span) {
+    > span {
         @include mixin.text(2xsmall);
 
         position: relative;
@@ -38,7 +38,7 @@
             border-color: var(--#{$-color}-500);
         }
 
-        &[data-color="#{$-color}"] :is(span) {
+        &[data-color="#{$-color}"] > span {
             color: var(--#{$-color}-700);
         }
     }
