--- a/packages/flow/src/css/component/FlowPill.module.scss
+++ b/packages/flow/src/css/component/FlowPill.module.scss
@@ -12,7 +12,7 @@
     border-radius: var(--radius-full);
     box-shadow: var(--shadow-sm);
 
-    :is(span) {
+    > span {
         @include mixin.text(small);
 
         color: var(--foreground-prominent);
